# CMake-Exercises

./: .gitignore  README.md
!Book_Examples/3.1 CMake Version/: CMakeLists.txt  main.cpp
!Book_Examples/4.1 Executable [EXCLUDE_FROM_ALL]/: CMakeLists.txt  anotherlib.cpp  main.cpp
!Book_Examples/4.1 Executables [EXCLUDE_FROM_ALL]/: CMakeLists.txt  anotherlib.cpp  anotherlib.h  main.cpp
!Book_Examples/4.2 Defining Libraries [EXCLUDE_FROM_ALL]/: CMakeLists.txt  main.cpp
!Book_Examples/5.1 Variables [PARENT_SCOPE]/: CMakeLists.txt
!Book_Examples/5.1 Variables [PARENT_SCOPE]/AltKlasor/: CMakeLists.txt
!Book_Examples/5.2 Variables [CACHE]/: CMakeLists.txt  main.cpp
!Book_Examples/5.5 Variables [MESSAGE]/: CMakeLists.txt
!CMake_Obsidian_Notes/.obsidian/: community-plugins.json  hotkeys.json  workspace.json
!CMake_Obsidian_Notes/.obsidian/plugins/obsidian-list-callouts/: data.json
!CMake_Obsidian_Notes/.obsidian/snippets/: nested-lists.css
!CMake_Obsidian_Notes/01 - CMake/Professional CMake; A Practical Guide/: Chapter 3. A Minimal Project.md  Chapter 4. Building Simple Targets.md  Chapter 5. Variables.md  Chapter 6. Flow Control.md  Chapter 7. Using Subdirectories.md  Chapter 8. Functions And Macros.md  Chapter 9. Properties.md
!Obsidian_Notes/.obsidian/: app.json  appearance.json  bookmarks.json  workspace.json
!Obsidian_Notes/.obsidian/plugins/advanced-canvas/: data.json
!Obsidian_Notes/.obsidian/plugins/callout-manager/: data.json
!Obsidian_Notes/.obsidian/plugins/obsidian-style-settings/: data.json
!Obsidian_Notes/.obsidian/snippets/: callouts.css
!Obsidian_Notes/01 - CMake/Professional CMake; A Practical Guide/: Chapter 1. Introduction.md  Chapter 2. Setting Up A Project.md  Chapter 3. A Minimal Project.md  Chapter 4. Building Simple Targets.md  Chapter 5. Variables.md  Chapter 8. Functions And Macros.md
01- makefile/: app.cpp  makefile
02 - cmake/: CMakeLists.txt  main.cpp
03 - libraries/: CMakeLists.txt  main.cpp  math.cpp  math.h
